<LinearLayout
    android:id="@+id/incid_edit_nopower_fr_layout"
    style="@style/baseLayout.withPadding"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/app_bar_bottom_margin"
    tools:context=".incidencia.core.edit.IncidEditMinFr">

    <include layout="@layout/incid_edit_comunidad_head_include"/>

    <TextView
        android:id="@+id/incid_reg_desc_txt"
        style="@style/textBase.editField.description"
        android:layout_marginBottom="@dimen/vertical_margin"
        tools:ignore="LabelFor"/>

    <LinearLayout
        android:id="@+id/incid_edit_ambito_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/incid_ambito_rot"
            style="@style/textBase.textFieldLabel1"
            android:text="@string/incid_ambito_rot"/>

        <TextView
            android:id="@+id/incid_ambito_view"
            style="@style/textBase.textFieldLabel2"/>
    </LinearLayout>

    <include layout="@layout/incid_edit_importancia_include"/>

    <Button
        android:id="@+id/incid_edit_fr_modif_button"
        style="@style/textBase.acButton1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/modif_button_rot"/>

    <include
        layout="@layout/incid_see_usercomu_importancia_merge"/>

</LinearLayout>