<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/incid_see_generic_fr"
    style="@style/baseLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/incid_see_generic_layout"
        style="@style/baseLayout.withPadding"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginTop="@dimen/app_bar_bottom_margin">

    <TextView
        android:id="@+id/incid_comunidad_rot"
        style="@style/textBase.textFieldLabel1"
        android:text="@string/incid_comunidad_rot"/>

    <Spinner
        android:id="@+id/incid_comunidad_spinner"
        style="@style/spinnerBase"/>

    <TextView
        android:id="@+id/incid_see_incidencias_rot"
        style="@style/textBase.textPageLabel2"
        android:text="@string/incid_incidencias_rot"/>

    <ListView
        android:id="@id/android:list"
        style="@style/basicList"
        android:choiceMode="singleChoice">
    </ListView>

    <TextView
        android:id="@id/android:empty"
        style="@style/textBase.no_item_list_message"
        android:text="@string/no_incidencia_to_show"
        android:visibility="gone">
    </TextView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/incid_new_incid_fab"
        style="@style/floatingButton"
        app:fabSize="mini"
        app:rippleColor="@color/deep_orange_200"
        app:srcCompat="@drawable/ic_create_black_24dp"/>

</android.support.design.widget.CoordinatorLayout>
