<LinearLayout
    android:id="@+id/incid_edit_maxpower_fr_layout"
    style="@style/baseLayout.withPadding"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/app_bar_bottom_margin"
    tools:context=".incidencia.core.edit.IncidEditMaxFr">

    <include
        layout="@layout/incid_edit_comunidad_head_include"/>

    <EditText
        android:id="@+id/incid_reg_desc_ed"
        style="@style/textBase.editField.description"
        android:layout_marginBottom="@dimen/vertical_margin"
        tools:ignore="LabelFor"/>

    <LinearLayout
        android:id="@+id/incid_edit_ambito_block"
        style="@style/baseLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/incid_ambito_rot"
            style="@style/textBase.textFieldLabel1"
            android:text="@string/incid_ambito_rot"/>
        <Spinner
            android:id="@+id/incid_reg_ambito_spinner"
            style="@style/spinnerBase"/>
    </LinearLayout>

    <include layout="@layout/incid_edit_importancia_include"/>

    <LinearLayout
        android:id="@+id/incid_edit_maxpower_buttons"
        style="@style/baseLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/vertical_margin">
        <Button
            android:id="@+id/incid_edit_fr_modif_button"
            style="@style/textBase.acButton1"
            android:text="@string/modif_button_rot"/>
        <Button
            android:id="@+id/incid_edit_fr_borrar_button"
            style="@style/textBase.acButton1"
            android:text="@string/borrar_button_rot"/>
    </LinearLayout>

    <include layout="@layout/incid_see_usercomu_importancia_merge"/>

</LinearLayout>

