<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/incid_edit_comunidad_block"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/baseLayout"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/incid_comunidad_rot"
        style="@style/textBase.textPageLabel2"
        android:layout_weight="0"
        android:text="@string/incid_comunidad_rot"/>

    <TextView
        android:id="@+id/incid_comunidad_txt"
        style="@style/textBase.textFieldLabel1"
        android:layout_marginStart="@dimen/simple_horizontal_margin"
        android:layout_weight="1"
        android:gravity="start"/>
</LinearLayout>