<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/baseLayout"
    android:fitsSystemWindows="true"
    tools:context=".incidencia.list.IncidSeeByComuAc"
    android:id="@+id/incid_see_by_comu_ac">

    <include layout="@layout/appbar_include_design"/>

</android.support.design.widget.CoordinatorLayout>